# goes-notify

./: .gitignore  .pylintrc  config.toml  pyproject.toml
src/goes_notifier/: app.py  cli.py  notifiers.py  util.py
src/goes_notifier/templates/: email.jinja2
tests/: test_all.py
