[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goes_notifier"
version = "0.1.0"
authors = [
    {name = "Stephen Melsom"}
]
description = "A tool to identify the latest DHS Global Entry interview appointments."
readme = "README.md"
requires-python = ">=3.11.3"
dependencies = [
    "click>=8.1.7",
    "attrs>=23.1.0",
    "loguru>=0.7.2",
    "pytest>=7.4.3",
    "jinja2>=3.1.2",
    "yagmail>=0.15.293"
]